--- a/ozzia/src/index.css
+++ b/ozzia/src/index.css
@@ -85,7 +85,7 @@ ul li a{
 }
 
 /* signup */
-html, body,#root, #signrow, #signrow>div,#formbar {
+html, body,#root, #signrow, #signrow>div,#formbar,.loading {
   height: 100%;
   box-sizing: border-box !important;
 }
@@ -232,4 +232,35 @@ hr{
 #slide-out *{
   color:white !important;
   font-weight: 500;
+}
+
+.loading{
+  background-color: #aeecdb;
+  padding: 30px 0;
+  text-align: center;
+  max-height:100%;
+  position:relative;
+}
+.loading img{
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.notFound{
+  background-color: white;
+  border-radius: 24px;
+  max-height: 100%;
+  text-align: center;
+}
+.notFound img{
+  margin: 0 auto;
+}
+.notFound a{
+  margin: 20px auto;
+  font-size: 14px;
+  /* width: 60%; */
 }
