--- a/ozzia/src/index.css
+++ b/ozzia/src/index.css
@@ -26,6 +26,18 @@ nav{
   /* position: fixed;
   top: 0; */
 }
+#mobile-demo *{
+  color: white !important;
+  font-weight: bold;
+  letter-spacing: 0.05em;
+}
+#mobile-demo li{
+  border-bottom: 1px solid white;
+  /* border-radius: 0 24px 24px 0; */
+}
+.sidenav-overlay {
+  opacity: 0 !important;
+}
 ul{
   text-transform: uppercase;
 }
@@ -263,4 +275,8 @@ hr{
   margin: 20px auto;
   font-size: 14px;
   /* width: 60%; */
+}
+.updatePic{
+  border-radius: 24px;
+  margin: 20px
 }
