--- a/ozzia/src/index.css
+++ b/ozzia/src/index.css
@@ -280,3 +280,45 @@ hr{
   border-radius: 24px;
   margin: 20px
 }
+
+.createForm > div{
+  margin: 20px 0;
+}
+.commentText{
+  margin-bottom: 25px;
+  font-size: 5vw;
+}
+.commentText span{
+  font-size: 6vw;
+}
+
+@media only screen and (min-width:993px){
+  #cardText{
+    height: 350px !important;
+  }
+}
+@media only screen and (min-width:280px){
+  .likeText{
+    font-size: 16px !important;
+  }
+  .postTitle{
+    font-size: 26px !important;
+  }
+  .bodyText{
+    font-size: 20px !important;
+  }
+  .commentText, .commentText *, .commentText > span{
+    font-size: 18px;
+  }
+}
+
+@media only screen and (min-width:420px){
+  #effectLike{
+    height: 56px;
+    width: 56px;
+  }
+  #effectLike i{
+    line-height: 56px;
+    font-size: 1.6rem;
+  }
+}
