--- a/ozzia/src/index.css
+++ b/ozzia/src/index.css
@@ -37,6 +37,8 @@ nav{
 }
 .sidenav-overlay {
   opacity: 0 !important;
+  /* z-index: -100 !important; */
+  display: none;
 }
 ul{
   text-transform: uppercase;
@@ -222,7 +224,7 @@ hr{
   border-radius: 24px;
   margin: 10px;
   /* padding-top: 20px; */
-  cursor: pointer;
+  /* cursor: pointer; */
   /* border:1px solid #272d2d; */
 }
 .itemImg{
@@ -328,6 +330,12 @@ hr{
   #cardText{
     height: 350px !important;
   }
+  #ozziaTitle{
+    padding: 60px 0!important;
+  }
+  #tagline{
+    padding-top: 20px !important;
+  }
 }
 @media only screen and (min-width:280px){
   .likeText{
@@ -361,5 +369,11 @@ hr{
   }
   #formbar{
     border-radius: 0 !important ;
+  }
+}
+
+@media only screen and (max-width:400px){
+  #github-embed{
+    display: none;
   }
 }
